rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Wed Nov 29 09:12:06 2023
*mangle
:PREROUTING ACCEPT [316180:132708714]
:INPUT ACCEPT [83463:7965600]
:FORWARD ACCEPT [94020:116922434]
:OUTPUT ACCEPT [84580:9321689]
:POSTROUTING ACCEPT [178595:126243879]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Wed Nov 29 09:12:06 2023
# Generated by iptables-save v1.8.9 (nf_tables) on Wed Nov 29 09:12:06 2023
*filter
:INPUT ACCEPT [83251:7901265]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [84388:9258713]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
-A INPUT -j LIBVIRT_INP
-A FORWARD -i enp3s0 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -i enp3s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -i enp3s0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -i enp3s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A OUTPUT -j LIBVIRT_OUT
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
COMMIT
# Completed on Wed Nov 29 09:12:06 2023
# Generated by iptables-save v1.8.9 (nf_tables) on Wed Nov 29 09:12:06 2023
*nat
:PREROUTING ACCEPT [170759:9179432]
:INPUT ACCEPT [31660:1327527]
:OUTPUT ACCEPT [11:1414]
:POSTROUTING ACCEPT [0:0]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -i ppp0 -p tcp -m tcp --dport 6443 -j DNAT --to-destination 192.168.122.56:6443
-A PREROUTING -p tcp -m tcp --dport 6443 -j DNAT --to-destination 192.168.122.56:6443
-A PREROUTING -i enp3s0 -p udp -m udp --dport 53 -j DNAT --to-destination 192.168.122.5:53
-A PREROUTING -i enp3s0 -p tcp -m tcp --dport 53 -j DNAT --to-destination 192.168.122.5:53
-A PREROUTING -i enp3s0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.122.2:443
-A PREROUTING -i enp3s0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.122.2:80
-A POSTROUTING -j LIBVIRT_PRT
-A POSTROUTING -j MASQUERADE
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Wed Nov 29 09:12:06 2023
